amends manifest.json bug with matches

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "content_scripts": [
     {
       "js": ["scripts/content.js"],
-      "matches": "https://hidive.com/*"
+      "matches": ["https://hidive.com/*"]
     }
   ]
 }
