--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     {
       "js": ["scripts/content.js"],
       "matches": ["https://www.hidive.com/*"],
-      "run_at": "document_idle"
+      "run_at": "document_end"
     }
   ]
 }
