--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,12 @@
   },
   "content_scripts": [
     {
-      "js": ["scripts/content.js"],
-      "matches": ["https://www.hidive.com/*"],
+      "js": [
+        "scripts/content.js"
+      ],
+      "matches": [
+        "https://www.hidive.com/*"
+      ],
       "run_at": "document_end"
     }
   ]
